# LowLatencyMachineEngine-C-

./: .gitignore  CMakeLists.txt  README.md  requirements.txt
include/: market_data.h  market_data_processor.h  order.h  order_book.h  order_matching_engine.h  performance_monitor.h  ring_buffer.h  tcp_server.h
python/: strategy_example.py  visualization.py
src/: main.cpp  market_data.cpp  market_data_processor.cpp  order.cpp  order_book.cpp  order_matching_engine.cpp  performance_monitor.cpp  python_bindings.cpp  ring_buffer.cpp  tcp_server.cpp
tests/: CMakeLists.txt  test_client.cpp
